<resources>
<string name="app_name">Weather</string>
<string name="the_day_temperature_text">The day temperature</string>
<string name="the_day_temperature_value">+10</string>
<string name="temperature_at_night_text">Temperature at night</string>
<string name="temperature_at_night_value">-10</string>
<string name="rainfall_text">Rainfall</string>
<string name="rainfall_value">Cloudy</string>
<string name="update_text_button">Update</string>
<string name="city_text">City</string>
<string name="date">10.04.2020</string>
    <string name="textviewSetCity">Choosing a city</string>
    <string name="nameCityFromEditWindow">Name</string>
    <string name="buttonSetCity">Confirmation</string>
</resources>
