<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSetCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="69dp"
        android:text="@string/textviewSetCity"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNameCity"
        app:layout_constraintEnd_toStartOf="@+id/editTextNameCity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextNameCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameCityFromEditWindow"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="15dp" />

    <Button
        android:id="@+id/buttonSetCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSetCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetCity" />
</android.support.constraint.ConstraintLayout>